# tree-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: main.rs
