[package]
name = "tree-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.15.0", default-features = false, features = [
    "runtime",
    "macros",
] }
futures-util = "0.3.31"
num_cpus = "1.17.0"

[[bin]]
name = "tree"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
