[package]
name = "tree-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = ["Win32_Security", "Win32_Storage_FileSystem"] }


[[bin]]
name = "tree"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"
